Enhancement:provide docker-compose,DockerFiles and nginx

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,7 @@
-FROM ubuntu:latest
-LABEL authors="bayazit"
-
-ENTRYPOINT ["top", "-b"]
+FROM openjdk:22-jdk-slim
+WORKDIR /app
+COPY target/file_exchange-0.0.1-SNAPSHOT-jar-with-dependencies.jar app.jar
+# Port
+EXPOSE 8080
+# Start
+CMD ["java", "-jar", "app.jar"]
