--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,31 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    env_file:
-      - .env
+    environment:
+      - JWT_SECRET=${JWT_SECRET}
     volumes:
       - ./users.db:/app/users.db
       - ./uploads:/app/uploads
     expose:
       - "8080"
     restart: unless-stopped
+    networks:
+      - app-network
 
   nginx:
     image: nginx:alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/build:/usr/share/nginx/html
+      - ./frontend/build:/usr/share/nginx/html:ro
     depends_on:
       - backend
     restart: unless-stopped
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
