--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,11 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     upstream backend {
         server backend:8080;
     }
@@ -13,7 +18,10 @@ http {
 
         # gzip
         gzip on;
+        gzip_vary on;
         gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        client_max_body_size 200M;
 
         # Front (static)
         location / {
@@ -25,11 +33,14 @@ http {
 
         # API
         location /api/ {
-            proxy_pass http://backend/;
+            proxy_pass http://backend/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
 
         # Files
@@ -39,9 +50,9 @@ http {
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
-            root /usr/share/nginx/html;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
+                    root /usr/share/nginx/html;
+                    expires 1y;
+                    add_header Cache-Control "public, immutable";
         }
     }
   }
